--- a/styles/style.css
+++ b/styles/style.css
@@ -36,6 +36,7 @@ section 2 started
     margin: 1.5rem auto 0 auto;
     display: block;
 }
+
 .influencer-section{
     display: flex;
     justify-content: space-between;
@@ -80,7 +81,13 @@ section 2 started
     top: 0;
     left: 0;
 }
-
+.section2-camera:hover .camera-photo{
+    transform: scale(1.3);
+    transition: transform 1s ease;
+}
+.camera-photo{
+    overflow: hidden;
+}
 /*----------------- 
 section2 end
 --------------- */
@@ -229,6 +236,12 @@ font-family: 'Raleway', sans-serif;
 /* responsive start */
 /* big monitor */
 
+@media only screen and (min-width: 1400px){
+    .section4{
+        width: 95%;
+    }
+}
+
 @media only screen and (min-width: 1200px){
     .container{
         width: 95%;
@@ -262,7 +275,7 @@ font-family: 'Raleway', sans-serif;
 /* .section4 started */
     .section4{
         width: 95%;
-        margin: 2rem;
+        
     }
     .collection-photos{
         grid-gap: 3rem;
@@ -421,12 +434,6 @@ font-family: 'Raleway', sans-serif;
         font-size: 15px;
     }
 }
-
-
-
-
-
-
 
 /* -----------
 mobile device media quairy 
